# WheatCloudSleep

./: .gitignore  .gitmodules  LICENSE  README.md
Art/: ChatBackground.sai2  ChatBackgroundTail.sai2  Girl.sai2  bedBoy.sai2  bedEmpty.sai2  bedGirl.sai2  logo.sai2
Art/Legacy/: Boy.sai2  bedBoy.sai2
Art/ourPhone/: ourAppTemplate.sai2  ourApp_Camera.sai2  ourApp_Chat.sai2  ourApp_CustomWallpaper.sai2  ourApp_MusicPlayer.sai2  ourApp_Photos.sai2  ourApp_Report.sai2  ourApp_WebBrowser.sai2  ourPhone.sai2  ourPhoneWallpaper.sai2
Art/ourPhone/MusicPlayerIcons/: LoopModeListLoop.sai2  LoopModeSingleLoop.sai2  LoopModeStop.sai2
Source/: 服务端和客户端交互指令集.txt  服务端和客户端交互注意事项.txt
Source/CloudSleep/: CloudSleep.yyp
Source/CloudSleep/animcurves/animcurve_cameralinear/: animcurve_cameralinear.yy
Source/CloudSleep/datafiles/: About_dlls.txt  ServerAddress.txt
Source/CloudSleep/notes/networkcodes/: networkcodes.yy
Source/CloudSleep/notes/networkcommandtype/: networkcommandtype.yy
Source/CloudSleep/objects/obj_GuiElement_Button/: Create_0.gml  Draw_64.gml  Step_0.gml  obj_GuiElement_Button.yy
Source/CloudSleep/objects/obj_GuiElement_Message/: CleanUp_0.gml  Create_0.gml  Draw_75.gml  obj_GuiElement_Message.yy
Source/CloudSleep/objects/obj_GuiElement_Page/: CleanUp_0.gml  Create_0.gml  Draw_64.gml  Draw_75.gml  Step_0.gml  obj_GuiElement_Page.yy
Source/CloudSleep/objects/obj_GuiElement_SlidingRod/: Create_0.gml  Destroy_0.gml  Draw_64.gml  obj_GuiElement_SlidingRod.yy
Source/CloudSleep/objects/obj_GuiElement_SlidingRod_Time/: Draw_64.gml  obj_GuiElement_SlidingRod_Time.yy
Source/CloudSleep/objects/obj_SceneDefaultBackground/: Create_0.gml  Draw_0.gml  obj_SceneDefaultBackground.yy
Source/CloudSleep/objects/obj_background/: Create_0.gml  Step_0.gml  obj_background.yy
Source/CloudSleep/objects/obj_bed/: Create_0.gml  Step_0.gml  obj_bed.yy
Source/CloudSleep/objects/obj_buttonshowsleeperid/: Create_0.gml  Draw_64.gml  Step_0.gml  obj_buttonshowsleeperid.yy
Source/CloudSleep/objects/obj_camera/: Create_0.gml  Step_0.gml  Step_1.gml  obj_camera.yy
Source/CloudSleep/objects/obj_choosesleepertypebutton/: Create_0.gml  Draw_0.gml  obj_choosesleepertypebutton.yy
Source/CloudSleep/objects/obj_client/: Alarm_0.gml  Alarm_1.gml  Alarm_2.gml  CleanUp_0.gml  Create_0.gml  Destroy_0.gml  Draw_64.gml  Draw_75.gml  Other_68.gml  Step_0.gml  obj_client.yy
Source/CloudSleep/objects/obj_clientconnect/: Create_0.gml  Draw_0.gml  Draw_75.gml  Other_68.gml  obj_clientconnect.yy
Source/CloudSleep/objects/obj_day_and_night/: CleanUp_0.gml  Create_0.gml  Draw_74.gml  Step_0.gml  obj_day_and_night.yy
Source/CloudSleep/objects/obj_decorate/: Create_0.gml  Step_0.gml  obj_decorate.yy
Source/CloudSleep/objects/obj_emoteRoulette/: Create_0.gml  Draw_64.gml  obj_emoteRoulette.yy
Source/CloudSleep/objects/obj_inputmynametextbox/: Create_0.gml  obj_inputmynametextbox.yy
Source/CloudSleep/objects/obj_kickshowvotes/: Create_0.gml  Draw_64.gml  Step_0.gml  obj_kickshowvotes.yy
Source/CloudSleep/objects/obj_kickwhobox/: Create_0.gml  Draw_64.gml  Step_0.gml  obj_kickwhobox.yy
Source/CloudSleep/objects/obj_mainMenu/: Create_0.gml  Draw_74.gml  Step_0.gml  Step_1.gml  obj_mainMenu.yy
Source/CloudSleep/objects/obj_makemycharacteroverbutton/: Draw_0.gml  obj_makemycharacteroverbutton.yy
Source/CloudSleep/objects/obj_ourAppParent/: Create_0.gml  Step_0.gml  obj_ourAppParent.yy
Source/CloudSleep/objects/obj_ourAppTemplate/: Step_0.gml  obj_ourAppTemplate.yy
Source/Server/CloudSleepServer/: CMakeLists.txt  CloudSleepServer.sln  CloudSleepServer.vcxproj  CloudSleepServer.vcxproj.filters  ProjectCommon.cpp  ProjectCommon.h  ReadMe  WheatBedManager.cpp  WheatBedManager.h  WheatChatRecorder.cpp  WheatChatRecorder.h  WheatCommand.cpp  WheatCommand.h  WheatTCPServer.cpp  WheatTCPServer.h  WheatVote.cpp  WheatVote.h  black_list.cpp  black_list.h  cJSON.c  cJSON.h  config.cpp  config.h  content_filter.cpp  content_filter.h  detect_rule.h  file_update_monitor.cpp  file_update_monitor.h  freq_detect_rule.cpp  freq_detect_rule.h  logger.cpp  logger.h  main.cpp  permission_mgr.cpp  permission_mgr.h  records.txt  report_recorder.h  room.cpp  room.h  sleeper.cpp  (+16 more)
Source/Server/CloudSleepServer/config/: bad_word.txt  config.json  rule.json  stop_char.txt
Source/Server/CloudSleepServer/server-build/: CMakeCache.txt
Tools/: README.md
Tools/RemoveDuplicatesLines/: deduplicate.cpp
(+135 files in other folders)
